@@ -78,6 +78,7 @@ define("POLLER_VERBOSITY_LOW", 2);
 define("POLLER_VERBOSITY_MEDIUM", 3);
 define("POLLER_VERBOSITY_HIGH", 4);
 define("POLLER_VERBOSITY_DEBUG", 5);
+define("POLLER_VERBOSITY_DEVDBG", 6);
 
 define("AVAIL_NONE", 0);
 define("AVAIL_SNMP_AND_PING", 1);
